test/examples/bad/duplicate_val.ml
(* Multiple val declarations for same name is ambiguous *)
val x : int
val x : float
let x = 42
